--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "19.0.0",
     "react-i18next": "^15.4.1",
     "react-native": "^0.79.1",
+    "react-native-exit-app": "^2.0.0",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-popover-view": "^6.1.0",
     "react-native-reanimated": "^3.17.4",
